# tapas

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CLONE.md  CONTRIBUTING.md  Contributor-License-Agreement.md  HOWTO.md  README.md  README.txt  index.html  literature.html  package.json  tapas_init.m  tapas_new_init.m
.admin/: tapas_add_tapas_prefix.m  tapas_find_dependencies.m  tapas_findreplace.m  tapas_get_functions_in_sub_dirs.m
HGF/: README  README.md  example_binary_input.txt  example_categorical_input.mat  example_usdchf.txt  hgf_demo.m  hgf_demo.mlx  tapas_Cov2Corr.m  tapas_align_priors.m  tapas_align_priors_fields.m  tapas_autocorr.m  tapas_bayes_optimal.m  tapas_bayes_optimal_binary.m  tapas_bayes_optimal_binary_config.m  tapas_bayes_optimal_binary_transp.m  tapas_bayes_optimal_categorical.m  tapas_bayes_optimal_categorical_config.m  tapas_bayes_optimal_categorical_transp.m  tapas_bayes_optimal_config.m  tapas_bayes_optimal_transp.m  tapas_bayes_optimal_whatworld.m  tapas_bayes_optimal_whatworld_config.m  tapas_bayes_optimal_whichworld.m  (+208 more)
mpdcm/src/: Makefile.am  Makefile.in  README  aclocal.m4  c_mpdcm.c  c_mpdcm.h  c_mpdcm_fmri_int.c  c_mpdcm_fmri_int.m  c_mpdcm_get_device.c  c_mpdcm_int_fmri.c  c_mpdcm_num_devices.c  c_mpdcm_set_device.c  config.h.in  configure  configure.ac  makefile  mpdcm.cu  mpdcm.hcu
mpdcm/src/m4/: ax_check_cuda.m4
mpdcm/src/src/: Makefile.am  Makefile.in  c_mpdcm.c  c_mpdcm.h  c_mpdcm_fmri_bs.c  c_mpdcm_fmri_euler.c  c_mpdcm_fmri_kr4.c  c_mpdcm_get_device.c  c_mpdcm_num_devices.c  c_mpdcm_set_device.c  dcm_euler_integration.c  dynamics.cu  integrators.cu  kernels.cu  mpdcm.cu  mpdcm.hcu  updates.cu
mpdcm/src/src/cuda/: Makefile.am  Makefile.in  fmri_FmriCuda.cu  fmri_FmriCuda.hcu  fmri_FmriEuler.cu  fmri_FmriEuler.hcu  fmri_FmriEulerBilinear.cu  fmri_FmriEulerBilinear.hcu  fmri_FmriEulerLarge.cu  fmri_FmriEulerLarge.hcu  fmri_FmriEulerNonlinear.cu  fmri_FmriEulerNonlinear.hcu  fmri_FmriRK4.cu  fmri_FmriRK4.hcu  fmri_FmriRK4Bilinear.cu  fmri_FmriRK4Bilinear.hcu  fmri_FmriRK4Linear.cu  fmri_FmriRK4Linear.hcu  fmri_FmriRK4Nonlinear.cu  fmri_FmriRK4Nonlinear.hcu  fmri_FmriStandardRK4Bilinear.cu  fmri_FmriStandardRK4Bilinear.hcu  fmri_FmriStandardRK4Nonlinear.cu  fmri_FmriStandardRK4Nonlinear.hcu  fmri_dynamics.cu  fmri_dynamics.hcu  fmri_ext.cu  fmri_ext.hcu  fmri_kernels.cu  fmri_kernels.hcu  fmri_mpdcm_Integrator.cu  fmri_mpdcm_Integrator.hcu  kernels.hcu  mpdcm_Integrator.cu  mpdcm_Integrator.hcu
mpdcm/src/src/erp/: Makefile.am  Makefile.in  Makefile.tmp  erp_ErpCuda.cu  erp_ErpCuda.hcu  erp_ErpEuler.cu  erp_ErpEuler.hcu  erp_Integrator.cu  erp_Integrator.hcu  erp_dynamics.cu  erp_dynamics.hcu  erp_ext.cu  erp_ext.hcu  erp_kernels.cu  erp_kernels.hcu  kernels.hcu
mpdcm/src/src/host/: DynamicsErp.cpp  DynamicsErp.hpp  DynamicsFmri.cpp  DynamicsFmri.hpp  DynamicsTrappenberg.cpp  DynamicsTrappenberg.hpp  IntegratorHost.hpp  InterfaceErp.hpp  InterfaceFmri.hpp  InterfaceHost.cpp  InterfaceHost.hpp  InterfaceTrappenberg.hpp  Makefile.am  Makefile.in  UpdateEuler.hpp  UpdateRK4.hpp  utilities.hpp
mpdcm/src/src/includes/: erp.hcu  fmri.hcu  mpdcm.h  mpdcm.hcu
mpdcm/src/src/libs/: Erp.cpp  Erp.hpp  ErpEuler.cpp  ErpEuler.hpp  Fmri.cpp  Fmri.hpp  FmriContainer.hpp  FmriEuler.cpp  FmriEuler.hpp  FmriEulerBilinear.cpp  FmriEulerBilinear.hpp  FmriEulerNonlinear.cpp  FmriEulerNonlinear.hpp  FmriRK4.cpp  FmriRK4.hpp  FmriRK4Bilinear.cpp  FmriRK4Bilinear.hpp  FmriRK4Nonlinear.cpp  FmriRK4Nonlinear.hpp  FmriStandardRK4Bilinear.cpp  FmriStandardRK4Bilinear.hpp  FmriStandardRK4Nonlinear.cpp  FmriStandardRK4Nonlinear.hpp  Interface.cpp  Interface.hpp  Makefile.am  Makefile.in  MatContainer.hpp  SparseContainer.cpp  SparseContainer.hpp  utilities.cpp  utilities.hpp
mpdcm/src/src/mex/: Makefile.am  Makefile.in  c_mpdcm_collect_simulations.cpp  c_mpdcm_destroy_container.cpp  c_mpdcm_fmri_euler.cpp  c_mpdcm_fmri_euler_bilinear.cpp  c_mpdcm_fmri_euler_nonlinear.cpp  c_mpdcm_fmri_rk4.cpp  c_mpdcm_fmri_rk4_bilinear.cpp  c_mpdcm_fmri_rk4_nonlinear.cpp  c_mpdcm_fmri_std_rk4_bilinear.cpp  c_mpdcm_fmri_std_rk4_bilinear_asynchronous.cpp  c_mpdcm_fmri_std_rk4_nonlinear.cpp
mpdcm/src/src/mex_erp/: Makefile.am  Makefile.in  c_mpdcm_erp_euler.cpp
mpdcm/src/src/mex_host/: Makefile.am  Makefile.in  c_mpdcm_erp_rk4_host.cpp  c_mpdcm_fmri_euler_host.cpp  c_mpdcm_fmri_rk4_host.cpp  c_mpdcm_trappenberg_rk4_host.cpp
mpdcm/src/src/mex_utils/: Makefile.am  Makefile.in  c_mpdcm_compflag.cpp  c_mpdcm_device_memory.cpp  c_mpdcm_device_reset.cpp  c_mpdcm_get_device.cpp
mpdcm/src/src/test/: Makefile.am  Makefile.in  test_Interface.cpp  test_SparseContainer.cpp
sem/src/: .ycm_extra_conf.py  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
sem/src/antisaccades/: Makefile.am  Makefile.in  README.md  antisaccades.h  dora.c  models.c  numericals.c  prosa.c  reparametrize.c  seri.c  seria.c  summaries.c  summaries_prosa.c  utils.c
sem/src/includes/: sem.h
sem/src/mex/: Makefile.am  Makefile.in  autogencode.py  c_action_codes.c  c_dora_multi_gamma.c  c_dora_multi_invgamma.c  c_dora_multi_later.c  c_dora_multi_lognorm.c  c_dora_multi_mixedgamma.c  c_dora_multi_wald.c  c_dora_n_states_gamma.c  c_dora_n_states_invgamma.c  c_dora_n_states_later.c  c_dora_n_states_lognorm.c  c_dora_n_states_mixedgamma.c  c_dora_n_states_wald.c  c_dora_ndims.c  c_dora_trial_by_trial_gamma.c  c_dora_trial_by_trial_invgamma.c  c_dora_trial_by_trial_later.c  c_dora_trial_by_trial_lognorm.c  c_dora_trial_by_trial_mixedgamma.c  c_dora_trial_by_trial_wald.c  c_dora_two_states_gamma.c  c_dora_two_states_invgamma.c  c_dora_two_states_invgamma_no_transform.c  c_dora_two_states_later.c  c_dora_two_states_lognorm.c  c_dora_two_states_mixedgamma.c  c_dora_two_states_wald.c  c_dora_two_states_wald_no_transform.c  c_prosa_multi_gamma.c  c_prosa_multi_invgamma.c  c_prosa_multi_later.c  c_prosa_multi_lognorm.c  c_prosa_multi_mixedgamma.c  c_prosa_multi_wald.c  c_prosa_n_states_gamma.c  c_prosa_n_states_invgamma.c  c_prosa_n_states_later.c  (+93 more)
sem/src/test/: Makefile.am  Makefile.in
(+1950 files in other folders)
